Restructure and add grunt.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 node_modules
-dist
-.tmp
-.sass-cache
-bower_components
+/src/lib
+*.db
+*.log
+data
+.idea
+releases/
+cache/
+
+/cache
+/releases
+
+nbproject
+lib/
+
+SuuntoDMEditor
