--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "SuuntoDMEditor",
-  "main": "index.html",
-  "window": {
-    "toolbar": false,
-    "width": 800,
-    "height": 600
-  },
-  "dependencies": {
-    "moment": "^2.8.3"
+  "name": "SuuntoDMEditor-Build",
+  "description": "SuntoDM Editor Build System",
+  "version": "0.0.1",
+  "dependencies": {},
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-node-webkit-builder": "^0.2.3",
+    "grunt-shell": "^1.1.1"
   }
 }
