--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/follesoe/divemanager-edit"
   },
   "window": {
-    "toolbar": false,
+    "toolbar": true,
     "width": 800,
     "height": 600
   },
