--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.26",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "angular-selection-model": "~0.8.1"
   }
 }
