--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,11 @@
   "description": "Application to edit the Suunto DM4 database",
   "version": "0.0.1",
   "main": "index.html",
+  "dependencies": {
+    "angular": "^1.3.15",
+    "lodash": "^2.4.1",
+    "moment": "^2.8.3"
+  },
   "author": {
     "name": "Jonas Follesø",
     "url": "https://github.com/follesoe/divemanager-edit"
@@ -11,9 +16,5 @@
     "toolbar": true,
     "width": 800,
     "height": 600
-  },
-  "dependencies": {
-    "lodash": "^2.4.1",
-    "moment": "^2.8.3"
   }
 }
