--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SuuntoDMEditor",
-  "description": "Application to edit the Suunto DM4 database",
-  "version": "0.0.1",
+  "description": "Application to edit the Suunto Dive Manager database",
+  "version": "0.0.2",
   "main": "index.html",
   "dependencies": {
     "angular": "^1.3.15",
