--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,8 @@
     "angular": "^1.3.15",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "react": "^0.13.3"
   },
   "author": {
     "name": "Jonas Follesø",
