--- a/src/package.json
+++ b/src/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.2",
   "main": "index.html",
   "dependencies": {
-    "angular": "^1.3.15",
-    "lodash": "^2.4.1",
+    "immstruct": "^2.0.0",
+    "immutable": "^3.7.4",
     "moment": "^2.8.3",
+    "node-jsx": "^0.13.3",
     "normalize.css": "^3.0.3",
+    "omniscient": "^3.2.0",
     "react": "^0.13.3"
   },
   "author": {
