--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "del": "^1.2.1",
+    "electron-prebuilt": "^0.31.1",
     "gulp": "^3.9.0",
     "gulp-shell": "^0.4.2",
     "gulp-util": "^3.0.6",
