Add electron shell
Starting point for electron version of app

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "build": "gulp nw",
-    "icons": "gulp icons"
+    "icons": "gulp icons",
+    "electron": "electron src/electronapp"
   }
 }
