--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -22,5 +22,8 @@
     "toolbar": true,
     "width": 1024,
     "height": 720
+  },
+  "scripts": {
+    "rebuild-sqlite3": "cd node_modules/sqlite3 && npm run prepublish && node-gyp configure --module_name=node_sqlite3 --module_path=../lib/binding/node-v45-darwin-x64 && node-gyp rebuild --target=0.27.1 --arch=x64 --target_platform=darwin --dist-url=https://atom.io/download/atom-shell --module_name=node_sqlite3 --module_path=../lib/binding/node-v45-darwin-x64"
   }
 }
