Fix build script.

--- a/src/nwjsapp/package.json
+++ b/src/nwjsapp/package.json
@@ -19,7 +19,7 @@
   },
   "window": {
     "title": "Suunto Dive Manager Editor",
-    "toolbar": true,
+    "toolbar": false,
     "width": 1024,
     "height": 720
   }
