--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.2",
   "main": "main.js",
   "dependencies": {
-    "SuuntoDMEditorShared": "file:../shared",
+    "electron-debug": "^0.4.0",
     "immstruct": "^2.0.0",
     "immutable": "^3.7.4",
     "moment": "^2.8.3",
     "node-jsx": "^0.13.3",
     "normalize.css": "^3.0.3",
     "omniscient": "^3.3.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "sqlite3": "^3.1.1"
   },
   "author": {
     "name": "Jonas Follesø",
@@ -24,6 +25,7 @@
     "height": 720
   },
   "scripts": {
+    "electron-rebuild": "electron-rebuild",
     "rebuild-sqlite3": "cd node_modules/sqlite3 && npm run prepublish && node-gyp configure --module_name=node_sqlite3 --module_path=../lib/binding/node-v45-darwin-x64 && node-gyp rebuild --target=0.27.1 --arch=x64 --target_platform=darwin --dist-url=https://atom.io/download/atom-shell --module_name=node_sqlite3 --module_path=../lib/binding/node-v45-darwin-x64"
   }
 }
