--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "del": "^1.2.1",
+    "electron-packager": "^5.1.1",
     "electron-prebuilt": "^0.34.3",
     "electron-rebuild": "^1.0.2",
     "gulp": "^3.9.0",
@@ -28,6 +29,7 @@
   },
   "scripts": {
     "electron-rebuild": "node ./node_modules/.bin/electron-rebuild",
+    "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns",
     "icons": "gulp icons",
     "start": "electron ."
   }
