--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -29,8 +29,8 @@
   },
   "scripts": {
     "electron-rebuild": "node ./node_modules/.bin/electron-rebuild",
-    "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns",
-    "build-win": "electron-packager . SuuntoDMEditor --platform=win --arch=all --version=0.34.3 --out=../../output --icon=icons/main.ico",
+    "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns --overwrite",
+    "build-win": "electron-packager . SuuntoDMEditor --platform=win --arch=all --version=0.34.3 --out=../../output --icon=icons/main.ico --overwrite",
     "icons": "gulp icons",
     "start": "electron ."
   }
