Adds auto update code and zipping of package

--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -29,8 +29,7 @@
   },
   "scripts": {
     "electron-rebuild": "node ./node_modules/.bin/electron-rebuild",
-    "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns --overwrite",
-    "build-win": "electron-packager . SuuntoDMEditor --platform=win --arch=all --version=0.34.3 --out=../../output --icon=icons/main.ico --overwrite",
+    "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns --overwrite --sign=\"Developer ID Application: Jonas Folleso (F9MU884WT4)\" --ignore=\"node_modules/(del|electron-debug|gulp|gulp-shell|gulp-util)\" && zip -r ../../output/SuuntoDMEditor-darwin-x64/SuuntoDMEditor-osx-x64.zip  ../../output/SuuntoDMEditor-darwin-x64/SuuntoDMEditor.app -q -9",
     "icons": "gulp icons",
     "start": "electron ."
   }
