--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -9,6 +9,7 @@
   "main": "main.js",
   "dependencies": {
     "electron-debug": "^0.4.0",
+    "fs-extra": "^0.26.2",
     "immstruct": "^2.0.0",
     "immutable": "^3.7.4",
     "moment": "^2.8.3",
