--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -8,24 +8,26 @@
   "version": "0.0.13",
   "main": "main.js",
   "dependencies": {
-    "electron-debug": "^0.4.0",
+    "electron-debug": "^0.5.1",
     "fs-extra": "^0.26.2",
     "immstruct": "^2.0.0",
     "immutable": "^3.7.4",
     "moment": "^2.8.3",
     "node-jsx": "^0.13.3",
+    "node-notifier": "^4.4.0",
     "normalize.css": "^3.0.3",
-    "omniscient": "^3.3.0",
-    "react": "^0.13.3",
+    "omniscient": "^4.1.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
-    "del": "^1.2.1",
+    "del": "^2.2.0",
     "electron-packager": "^5.1.1",
-    "electron-prebuilt": "^0.34.3",
+    "electron-prebuilt": "^0.36.1",
     "electron-rebuild": "^1.0.2",
     "gulp": "^3.9.0",
-    "gulp-shell": "^0.4.3",
+    "gulp-shell": "^0.5.1",
     "gulp-util": "^3.0.7"
   },
   "scripts": {
@@ -33,5 +35,9 @@
     "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns --overwrite --sign=\"Developer ID Application: Jonas Folleso (F9MU884WT4)\" && zip -r ../../output/SuuntoDMEditor-darwin-x64/SuuntoDMEditor-osx-x64.zip  ../../output/SuuntoDMEditor-darwin-x64/SuuntoDMEditor.app -q -9",
     "icons": "gulp icons",
     "start": "electron ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/follesoe/divemanager-edit.git"
   }
 }
