--- a/src/electronapp/package.json
+++ b/src/electronapp/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "electron-rebuild": "node ./node_modules/.bin/electron-rebuild",
-    "build-mac": "electron-packager . SuuntoDMEditor --platform=darwin --arch=all --version=0.34.3 --out=../../output --icon=icons/main.icns --overwrite --sign=\"Developer ID Application: Jonas Folleso (F9MU884WT4)\" && zip -r ../../output/SuuntoDMEditor-darwin-x64/SuuntoDMEditor-osx-x64.zip  ../../output/SuuntoDMEditor-darwin-x64/SuuntoDMEditor.app -q -9",
+    "build-mac": "gulp build-mac",
     "icons": "gulp icons",
     "start": "electron ."
   },
